objects/Objection_Handling__kav.object
<CustomObject><fields>
        <fullName>Attachments__c</fullName>
        <label>Attachments</label>
        <type>File</type>
    </fields><fields>
        <fullName>Chat_Answer__c</fullName>
        <label>Chat Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields><articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><label>Objection Handling</label><pluralLabel>Objection Handling</pluralLabel></CustomObject>